--- a/package.json
+++ b/package.json
@@ -35,7 +35,9 @@
     "babel-loader": "^8.2.2",
     "clean-webpack-plugin": "^3.0.0",
     "copy-webpack-plugin": "^5.1.1",
-    "css-loader": "5.0.1",
+    "css-loader": "^5.0.1",
+    "file-loader": "^6.2.0",
+    "html-loader": "^1.3.2",
     "html-webpack-plugin": "^5.0.0-beta.4",
     "mini-css-extract-plugin": "^1.3.3",
     "node-sass": "^5.0.0",
@@ -49,7 +51,6 @@
     "webpack": "^5.12.2",
     "webpack-cli": "^4.3.1",
     "webpack-dev-server": "^3.11.1",
-    "webpack-node-externals": "^2.5.2",
-    "html-loader": "^1.3.2"
+    "webpack-node-externals": "^2.5.2"
   }
 }
